--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -205,15 +206,220 @@
       </div>
     </section>
     <section>
-      <div class="container-slide">
-        <div class="container-text">
-          <div class="head2">
-            <div class="paragraph">
-              
+      <div class="container10">
+        <div class="for-card">
+          <h2>SUCCESS STORIES</h2>
+          <div class="for-success">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+            <div class="for-both">
             </div>
           </div>
         </div>
       </div>
     </section>
+    <section>
+      <div class="container11">
+        <div class="for-background">
+          <div class="for-image">
+            <img src="https://preview.colorlib.com/theme/gutim/img/banner-person.png.webp" alt="trainer">
+            <div class="for-textcard">
+                <h2>GET TRAINING TODAY</h2>
+                <p>Gimply dummy text of the printing and typesetting industry.
+                  Lorem Ipsum has been the industry’s standard.</p>
+              <div class="for-button">
+                <a href="#">Contact Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container12">
+        <div class="for-header">
+          <h5>MEMBERSHIP PLANS</h5>
+         </div> 
+          <div class="for-cards">
+            <div class="first-card">
+                <h4>BASIC</h4>
+                <div class="triangle"></div>
+                <h2 class="price">$17</h2>
+                <p class="mo">/01 mo</p>
+                <p>Duration</p>
+                <p class="bold">12 months</p>
+                <p class="light">Personal trainer</p>
+                <p class="bold">00 person</p>
+                <p class="light">Amount of people</p>
+                <p class="bold">01 person</p>
+                <p class="light">Number of visits</p>
+                <p class="bold">Unlimited</p>
+                <a href="#" class="card-button">Start Now</a>
+              </div>
+              <div class="second-card">
+                <h4>STANDARD</h4>
+                <div class="triangle"></div>
+                <h2 class="price">$57</h2>
+                <p class="mo">/01 mo</p>
+                <p>Duration</p>
+                <p class="bold">12 months</p>
+                <p class="light">Personal trainer</p>
+                <p class="bold">00 person</p>
+                <p class="light">Amount of people</p>
+                <p class="bold">01 person</p>
+                <p class="light">Number of visits</p>
+                <p class="bold">Unlimited</p>
+                <a href="#" class="card-button">Start Now</a>
+              </div>
+              <div class="third-card">
+                <h4>PREMIUM</h4>
+                <div class="triangle"></div>
+                <h2 class="price">$98</h2>
+                <p class="mo">/01 mo</p>
+                <p>Duration</p>
+                <p class="bold">12 months</p>
+                <p class="light">Personal trainer</p>
+                <p class="bold">00 person</p>
+                <p class="light">Amount of people</p>
+                <p class="bold">01 person</p>
+                <p class="light">Number of visits</p>
+                <p class="bold">Unlimited</p>
+                <a href="#" class="card-button">Start Now</a>
+              </div>
+          </div>    
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container13">
+        <div class="forcards6">
+          <div class="for-head5">
+            <h2>REGISTER NOW</h2>
+            <p>The First 7 Day Trial Is Completely Free With The Teacher</p>
+          </div>
+          <div class="forName">
+            <label for="FirstName">First Name</label> 
+            <input type="text" name="name" id="name">
+          </div>
+          <div class="foremail">
+            <label for="email">Email</label>
+            <input type="email" name="mail" id="email">
+          </div>
+          <div class="forname">
+            <label for="lastname">Lastname</label>
+            <input type="text" name="name" id="name">
+          </div>
+          <div class="forphone">
+            <label for="Mobile">Mobile No*</label>
+            <input type="text" name="phone" id="phone">
+          </div>
+          <div class="forbutton">
+            <a href="#">Get Started</a>
+          </div>
+          <div class="forimage1">
+            <img src="https://preview.colorlib.com/theme/gutim/img/register-pic.jpg.webp" alt="happiness">
+          </div>
+        </div>
+      </div>  
+    </section>
+    <section>
+      <div class="container14">
+        <div class="forsection">
+          <div class="forhead7">
+            <h6>LATEST BLOG</h6>
+          <div class="forcards7">
+            <div class="forfirst">
+              <img src="https://preview.colorlib.com/theme/gutim/img/blog/blog-1.jpg.webp" alt="hand">
+              <div class="firstcard1">
+                <p>February 17, 2019</p>
+                <a href="#">#Gym</a>
+                <h3>10 States At Risk of Rural Hospital Closures</h3>
+              </div>
+            </div>
+            <div class="forfirst">
+              <img src="https://preview.colorlib.com/theme/gutim/img/blog/blog-2.jpg.webp" alt="hand">
+              <div class="firstcard1">
+                <p>February 17, 2019</p>
+                <a href="#">#Sport</a>
+                <h3>Diver who helped save Thai soccer team</h3>
+              </div>
+            </div>
+            <div class="forfirst">
+              <img src="https://preview.colorlib.com/theme/gutim/img/blog/blog-3.jpg.webp" alt="hand">
+              <div class="firstcard1">
+                <p>February 17, 2019</p>
+                <a href="#">#Body</a>
+                <h3>Man gets life in prison for stabbing</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container15">
+        <div class="for-backgrounds">
+          <div class="forleftcard">
+            <div class="forborderside"></div>
+              <p>NEW MEMBER</p>
+              <h2>7 days for free</h2>
+              <p class="info">Complete the training sessions with us, surely you will be happy</p>
+              <a href="#">Get Started</a>
+            </div>  
+          </div>
+          <div class="forrightcard">
+            <div class="forborderside"></div>
+              <p>NEW MEMBER</p>
+              <h2>7 days for free</h2>
+              <p class="info">Complete the training sessions with us, surely you will be happy</p>
+              <a href="#">Get Started</a>
+            </div>  
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container16">
+        <div class="forup">
+          <div class="firstup">
+            <h3>Phone</h3>
+            <p>(123) 118 9999 - (123) 118 9999</p>
+          </div>
+          <div class="firstup">
+            <h3>Address</h3>
+            <p>72 Kangnam, 45 Opal Point Suite 391</p>
+          </div>
+          <div class="firstup">
+            <h3>Email</h3>
+            <p>contactcompany@Gutim.com</p>
+          </div>
+        </div>
+        <div class="forfooterbanner">
+          <div class="forfootertext">
+            <h2>SUBSCRIBE TO OUR MAILING LIST</h2>
+            <p>Sign up to receive the latest information</p>
+          </div>
+          <div class="foremail">
+            <input type="text" name="email" id="email" placeholder="Enter Your Email">
+            <button class="button">
+              <i class="fa fa-send-o" style="font-size:24px" aria-hidden="true"></i>
+            </button>
+          </div>
+        </div>
+        <div class="for-footer-text">
+          <p class="icons">© </p>
+          <p> Copyright ©2023 All rights reserved | This template is made with  by Colorlib</p>
+          <a href="#">Term&Use</a>
+          <a href="#">Privacy Policy</a>
+          <div class="icons1">
+            <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a> 
+            <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a> 
+            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a> 
+            <a href=""><i class="fa-solid fa-basketball"></i></a> 
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
